tests/algorithms/transpiler/Zig/digital_image_processing/filters/bilateral_filter.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/digital_image_processing/filters/bilateral_filter.zig:8:24: error: expected ',' after field
/workspace/mochi/tests/algorithms/transpiler/Zig/digital_image_processing/filters/bilateral_filter.zig:8:1: note: use 'var' or 'const' to declare variable